force-app/main/default/objects/Event_Participant__c/fields/Attended_Event__c.field-meta.xml
<CustomField>
    <fullName>Attended_Event__c</fullName>
    <label>Attended Event</label>
    <length>1</length>
    <type>Text</type>
</CustomField>