force-app/main/default/objects/Event_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <length>1</length>
    <type>Text</type>
</CustomField>