force-app/main/default/objects/Event_Participant__c/fields/Program_Event__c.field-meta.xml
<CustomField>
    <fullName>Program_Event__c</fullName>
    <label>Program Event</label>
    <length>1</length>
    <type>Text</type>
</CustomField>