force-app/main/default/objects/Event_Participant__c/fields/Program_Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Participation__c</fullName>
    <label>Program Event Participation</label>
    <length>1</length>
    <type>Text</type>
</CustomField>