force-app/main/default/objects/Event_Participant__c/fields/Waitlisted__c.field-meta.xml
<CustomField>
    <fullName>Waitlisted__c</fullName>
    <label>Waitlisted</label>
    <length>1</length>
    <type>Text</type>
</CustomField>